--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-rough-notation": "^1.0.3",
     "sass": "^1.62.1",
     "typescript": "5.0.4"
   }
